--- a/bs-config.json
+++ b/bs-config.json
@@ -1,5 +1,8 @@
 {
     "server": [
-        "src"
+        "src",
+        "node_modules/bootstrap/dist/css",
+        "node_modules/bootstrap/dist/js"
+
     ]
 }
